--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@radix-ui/react-avatar": "^1.1.10",
     "dompurify": "^3.1.7",
     "prop-types": "^15.8.1",
     "react": "^19.1.1",
