--- a/package.json
+++ b/package.json
@@ -12,9 +12,10 @@
   "dependencies": {
     "@radix-ui/react-avatar": "^1.1.10",
     "dompurify": "^3.1.7",
+    "framer-motion": "^12.23.24",
     "prop-types": "^15.8.1",
-    "react": "^19.1.1",
-    "react-dom": "^19.1.1",
+    "react": "^19.2.0",
+    "react-dom": "^19.2.0",
     "react-icons": "^5.5.0",
     "react-intersection-observer": "^9.16.0"
   },
