--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@radix-ui/react-avatar": "^1.1.10",
     "dompurify": "^3.1.7",
+    "firebase": "^12.5.0",
     "framer-motion": "^12.23.24",
     "gsap": "^3.13.0",
     "prop-types": "^15.8.1",
